# rosneuro_integrator_exponential

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_integrator_exponential.xml
cfg/: Exponential.cfg  ExponentialMargin.cfg
include/rosneuro_integrator_exponential/: Exponential.h
launch/: test.launch
src/: Exponential.cpp
test/: TestExponential.cpp
