<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_integrator_exponential</name>
  <version>1.0.0</version>
  <description>ROSNeuro integrator exponential plugin package</description>
  <author email="luca.tonin@unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <depend>rosneuro_msgs</depend>
  <depend>rosneuro_integrator</depend>
  
  <exec_depend>message_runtime</exec_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
	  
  <export>
	  <rosneuro_integrator plugin="${prefix}/plugin_integrator_exponential.xml"/>
  </export>
</package>
